# ComputerVisionAndMachineLearning

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exec  facedetect  facedetect.cpp  letter.txt  letter.yaml  letter_recog  letter_recog.cpp  notes.txt
Rendu1/: README.txt  facedetect.cpp
Rendu2/: README.txt  facedetect.cpp  letter.txt
Rendu3/: README.txt  facedetect.cpp  letter.txt
Rendu4/: README.txt
